flux-system/pocketbase/redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: pocketbase
spec:
  redirectScheme:
    scheme: https
    permanent: true
