flux-system/pocketbase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketbase
  namespace: default
spec:
  selector:
    app: pocketbase
  ports:
  - port: 8090
    targetPort: 8090
    protocol: TCP
  type: ClusterIP
