flux-system/pocketbase/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocketbase-app
  namespace: pocketbase
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pocket.lanlab.xyz`)
      kind: Rule
      services:
        - name: pocketbase
          namespace: pocketbase
          port: 8090
      middlewares:
        - name: redirect-https
        - name: headers-middleware
          namespace: pocketbase
        # - name: keda-http-addon-interceptor
        #   namespace: keda

  tls:
    secretName: pocket-lanlab-xyz-tls
