flux-system/pocketbase/pocket-http-ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-app-http
  namespace: pocket
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pocket.lanlab.xyz`)
      kind: Rule
      services:
        - name: pocket-app-service
          port: 80
      middlewares:
        # - name: keda-http-addon-interceptor
        #   namespace: keda
        - name: redirect-https
